--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -2,7 +2,8 @@
 <!--
 By accessing and/or using this code snippet, you agree to AccuWeather’s terms and conditions (in English) which can be found at https://www.accuweather.com/en/free-weather-widgets/terms and AccuWeather’s Privacy Statement (in English) which can be found at https://www.accuweather.com/en/privacy.
 -->
-</a><div id="awcc1532187822421" class="aw-widget-current" data-locationkey="331250" data-unit="f" data-language="en-us" data-useip="false" data-uid="awcc1532187822421"></div><script type="text/javascript" src="https://oap.accuweather.com/launch.js"></script>
+</a><div id="awtd1532188637853" class="aw-widget-36hour"  data-locationkey="331250" data-unit="f" data-language="en-us" data-useip="false" data-uid="awtd1532188637853" data-editlocation="false" data-lifestyle="allergies"></div><script type="text/javascript" src="https://oap.accuweather.com/launch.js"></script>
+
 <a href="https://www.accuweather.com/en/us/longwood-fl/32750/weather-forecast/342730" class="aw-widget-legal">
 <!--
 By accessing and/or using this code snippet, you agree to AccuWeather’s terms and conditions (in English) which can be found at https://www.accuweather.com/en/free-weather-widgets/terms and AccuWeather’s Privacy Statement (in English) which can be found at https://www.accuweather.com/en/privacy.
