--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -9,3 +9,15 @@ By accessing and/or using this code snippet, you agree to AccuWeather’s terms 
 By accessing and/or using this code snippet, you agree to AccuWeather’s terms and conditions (in English) which can be found at https://www.accuweather.com/en/free-weather-widgets/terms and AccuWeather’s Privacy Statement (in English) which can be found at https://www.accuweather.com/en/privacy.
 -->
 </a><div id="awcc1532188494746" class="aw-widget-current"  data-locationkey="342730" data-unit="f" data-language="en-us" data-useip="false" data-uid="awcc1532188494746"></div><script type="text/javascript" src="https://oap.accuweather.com/launch.js"></script>
+
+
+<!-- noozilla code start -->
+<table border="0"><tr><td>
+	<script language="JavaScript" charset="utf-8" src="http://www.noozilla.com/iframe.php?type=2&bgcolor=FFFFFF&bdcolor=3B5998&lcolor=1B157A&tcolor=FFFFFF&fontsize=8&box=160&window=1&font=1&bold=1&textalign=1">
+	</script>
+	</td></tr><tr><td align="right">
+	<a href="http://www.noozilla.com/">
+	<img src="http://static.noozilla.com/iframe/images/ifr.png" alt="Noozilla.com News" border="0"></a>
+	</td></tr></table>
+	<!-- noozilla code end -->
+	
