--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -21,3 +21,14 @@ By accessing and/or using this code snippet, you agree to AccuWeather’s terms 
 	</td></tr></table>
 	<!-- noozilla code end -->
 	
+
+<!-- noozilla code start -->
+<table border="0"><tr><td>
+	<script language="JavaScript" charset="utf-8" src="http://www.noozilla.com/iframe.php?cat=tech&type=2&bgcolor=FFFFFF&bdcolor=3B5998&lcolor=1B157A&tcolor=FFFFFF&fontsize=8&box=160&window=1&font=1&bold=1&textalign=1">
+	</script>
+	</td></tr><tr><td align="right">
+	<a href="http://www.noozilla.com/tech/">
+	<img src="http://static.noozilla.com/iframe/images/ifr.png" alt="Tech" border="0"></a>
+	</td></tr></table>
+	<!-- noozilla code end -->
+	
